--- a/ProyectoUnicineIsaac/ProyectoUnicineIsaac/Reports/rptGenero.rdlc
+++ b/ProyectoUnicineIsaac/ProyectoUnicineIsaac/Reports/rptGenero.rdlc
@@ -9,11 +9,18 @@
       </ConnectionProperties>
       <rd:DataSourceID>86327772-eebc-4d6c-bf2d-c169e50f746c</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="ProyectoUnicineIsaacReports1">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>c4302c73-5139-4322-ad22-e1605b2c93cf</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetGenero">
       <Query>
-        <DataSourceName>ProyectoUnicineIsaacReports</DataSourceName>
+        <DataSourceName>ProyectoUnicineIsaacReports1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -422,6 +429,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                   </TablixCells>
