--- a/UTR-E10. WPF. Aplicación de gestión/UTR-E10. WPF. Aplicación de gestión/UCIncidenciaHW.xaml
+++ b/UTR-E10. WPF. Aplicación de gestión/UTR-E10. WPF. Aplicación de gestión/UCIncidenciaHW.xaml
@@ -1,38 +1,12 @@
-﻿<Window x:Class="UTR_E10.WPF.Aplicación_de_gestión.UCIncidenciaHW"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UTR_E10.WPF.Aplicación_de_gestión"
-        mc:Ignorable="d"
-        Title="UCIncidenciaHW" Height="450" Width="750">
+﻿<UserControl x:Class="UTR_E10.WPF.Aplicación_de_gestión.UCIncidenciaHW"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:UTR_E10.WPF.Aplicación_de_gestión"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Button x:Name="btnBorrar" Width="80" Height="25" Content="Borrar" Margin="430,10,0,370" Click="btnBorrar_Click"/>
-        <Button x:Name="btnAceptar" Width="80" Height="25" Content="Aceptar" Margin="600,10,0,370" Click="btnAceptar_Click"/>
-
-        <Label Content="Descripción:" Width="75" Height="25" Margin="0,0,570,300"/>
-        <TextBox x:Name="txtDesc" Width="550" Height="25" Margin="60,0,0,300"/>
-
-        <Label Content="Fecha:" Width="50" Height="25" Margin="0,0,570,240"/>
-        <DatePicker x:Name="dtpFecha" Width="300" Height="25" Margin="0,0,190,240" />
-
-        <CheckBox x:Name="cbCerrada" Content="Cerrada" Width="65" Height="25" Margin="180,0,0,230"/>
-
-        <Label Content="Etiqueta:" Width="55" Height="25" Margin="0,0,570,180" />
-        <TextBox x:Name="txtEtiqueta" Width="300" Height="25" Margin="0,0,190,180"/>
-
-        <CheckBox x:Name="cbEnciende" Content="Enciende" Width="70" Height="25" Margin="185,0,0,180"/>
-
-        <Label Content="Clase" Width="40" Height="25" Margin="0,0,670,120" />
-
-
-        <RadioButton x:Name="rbTorre" GroupName="clase" Height="20" Width="45" Margin="0,0,670,70" Tag="torre">Torre</RadioButton>
-        <RadioButton x:Name="rbImpresora" GroupName="clase" Height="20" Width="80"  Margin="0,0,520,70" Tag="impresora">Impresora</RadioButton>
-        <RadioButton x:Name="rbRed" GroupName="clase" Height="20" Width="45"  Margin="0,0,390,70" Tag="red">Red</RadioButton>
-
-        <Label Content="Observaciones" Height="25" Width="90" Margin="0,0,620,20"/>
-
-        <TextBox x:Name="txtObserv" Width="700" Height="190" Margin="0,200,0,0"/>
-
+            
     </Grid>
-</Window>
+</UserControl>
