--- a/UTR-E10. WPF. Aplicación de gestión/UTR-E10. WPF. Aplicación de gestión/UCIncidenciaOtros.xaml
+++ b/UTR-E10. WPF. Aplicación de gestión/UTR-E10. WPF. Aplicación de gestión/UCIncidenciaOtros.xaml
@@ -1,28 +1,12 @@
-﻿<Window x:Class="UTR_E10.WPF.Aplicación_de_gestión.UCIncidenciaOtros"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UTR_E10.WPF.Aplicación_de_gestión"
-        mc:Ignorable="d"
-        Title="UCIncidenciaOtros" Height="450" Width="800">
+﻿<UserControl x:Class="UTR_E10.WPF.Aplicación_de_gestión.UCIncidenciaOtros"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:UTR_E10.WPF.Aplicación_de_gestión"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Button x:Name="btnBorrar" Width="80" Height="25" Content="Borrar" Margin="430,10,0,370"/>
-        <Button x:Name="btnAceptar" Width="80" Height="25" Content="Aceptar" Margin="600,10,0,370"/>
-
-        <Label Content="Descripción:" Width="75" Height="25" Margin="0,0,570,300"/>
-        <TextBox x:Name="txtDesc" Width="600" Height="25" Margin="110,0,0,300"/>
-
-        <Label Content="Fecha:" Width="50" Height="25" Margin="0,0,570,240"/>
-        <DatePicker x:Name="dtpFecha" Width="300" Height="25" Margin="0,0,190,240" />
-
-        <CheckBox x:Name="cbCerrada" Content="Cerrada" Width="65" Height="25" Margin="180,0,0,230"/>
-
-        <Label Content="Lugar:" Width="55" Height="28" Margin="0,0,570,180" />
-        <TextBox x:Name="txtEtiqueta" Width="300" Height="25" Margin="0,0,190,180"/>
-
-        <Label Content="Observaciones" Height="25" Width="90" Margin="0,0,620,100"/>
-
-        <TextBox x:Name="txtObserv" Width="700" Height="220" Margin="0,160,0,0"/>
+            
     </Grid>
-</Window>
+</UserControl>
